fix: align title and title content in Dynamic Page (#1924)
* fix: align title and title content in Dynamic Page

- removed modifier class `fd-dynamic-page__collapsible-header-container--collapsed`
- modified z-index usage to fix look in mobile popover case
- keep title content also ellipsable and restrict to single line to maintain alignment
- use variable for common value

* update storyshot

* fix mobile overflow buttons in IE

* replace display table with flex to fix IE

* refactor code

* minor documentation update

* removing mixed scopes

--- a/src/dynamic-page.scss
+++ b/src/dynamic-page.scss
@@ -83,7 +83,9 @@ $block: #{$fd-namespace}-dynamic-page;
       justify-content: space-between;
     }
 
-    @include fd-fiori-focus(0.0625rem);
+    @include fd-fiori-focus($fd-dynamic-page-focus-outline-offset) {
+      z-index: 1;
+    }
 
     min-height: 3rem;
     word-wrap: break-word;
@@ -133,12 +135,14 @@ $block: #{$fd-namespace}-dynamic-page;
   &__title-container {
     @include fd-reset();
 
-    @include fd-flex-vertical-center() {
-      justify-content: flex-start;
+    @include fd-flex() {
+      align-items: baseline;
     }
   }
 
-  .#{$fd-namespace}-breadcrumb.#{$block}__breadcrumb {
+  &__breadcrumb {
+    @include fd-reset();
+
     padding: 0.5rem 0 0.25rem 0;
 
     &--sm {
@@ -148,9 +152,9 @@ $block: #{$fd-namespace}-dynamic-page;
 
   &__breadcrumb-title-container {
     @include fd-reset();
-    @include fd-flex(column);
 
     flex: 1;
+    min-width: 0;
   }
 
   &__breadcrumb-container {
@@ -183,6 +187,7 @@ $block: #{$fd-namespace}-dynamic-page;
       color: var(--sapGroup_TitleTextColor);
       font-size: var(--sapFontHeader3Size);
       max-width: 100%;
+      vertical-align: bottom;
     }
   }
 
@@ -196,8 +201,10 @@ $block: #{$fd-namespace}-dynamic-page;
 
   &__title-content {
     @include fd-reset();
+    @include fd-ellipsis();
 
     padding: 0 0 0 1rem;
+    vertical-align: baseline;
 
     @include fd-rtl() {
       padding: 0 1rem 0 0;
@@ -225,10 +232,13 @@ $block: #{$fd-namespace}-dynamic-page;
     @include fd-flex-vertical-center();
   }
 
-  .#{$fd-namespace}-toolbar.#{$block}__toolbar {
+  &__toolbar {
+    @include fd-reset();
+
     padding: 0 0 0 1rem;
     order: 1;
     justify-content: flex-end;
+    align-items: flex-end;
 
     @include fd-rtl() {
       padding: 0 1rem 0 0;
@@ -237,8 +247,10 @@ $block: #{$fd-namespace}-dynamic-page;
     }
 
     &--sm {
-      flex: 2;
+      margin-left: auto;
       padding: 0;
+      align-items: center;
+      align-self: center;
 
       @include fd-rtl() {
         padding: 0;
@@ -256,13 +268,17 @@ $block: #{$fd-namespace}-dynamic-page;
     }
   }
 
-  .#{$fd-namespace}-toolbar.#{$block}__toolbar-actions {
+  &__toolbar-actions {
+    @include fd-reset();
+
     padding: 0;
     order: 2;
     justify-content: flex-end;
+    align-items: baseline;
 
     &--sm {
       flex: 1;
+      align-items: center;
     }
 
     &--md {
@@ -270,8 +286,11 @@ $block: #{$fd-namespace}-dynamic-page;
     }
   }
 
-  .#{$fd-namespace}-toolbar.#{$block}__title-content-toolbar {
+  &__title-content-toolbar {
+    @include fd-reset();
+
     justify-content: flex-start;
+    align-self: center;
     padding: 0;
   }
 
@@ -282,7 +301,7 @@ $block: #{$fd-namespace}-dynamic-page;
       justify-content: space-between;
     }
 
-    @include fd-fiori-focus(0.0625rem);
+    @include fd-fiori-focus($fd-dynamic-page-focus-outline-offset);
 
     word-wrap: break-word;
     background: var(--sapObjectHeader_Background);
@@ -325,10 +344,6 @@ $block: #{$fd-namespace}-dynamic-page;
   &__collapsible-header-container {
     // contains B and B1
     @include fd-reset();
-
-    &--collapsed {
-      z-index: 1;
-    }
   }
 
   &__collapsible-header {
@@ -365,8 +380,7 @@ $block: #{$fd-namespace}-dynamic-page;
     &--overflow {
       overflow: hidden;
     }
-  }
-  .#{$fd-namespace}-tabs.#{$block}__tabs {
+
     &--sm {
       @include responsive-page($padding-x: 0.5rem);
     }
@@ -422,6 +436,7 @@ $block: #{$fd-namespace}-dynamic-page;
       background: var(--fdDynamicPage_Button_Group_Background);
       width: 4.25rem;
       height: $fd-dynamic-page-button-group-height;
+      z-index: 1;
 
       // button styles
       .#{$block}__pin-button.#{$fd-namespace}-button,
